--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   dio: ^4.0.0
   shared_preferences: ^2.0.5
   font_awesome_flutter: ^9.0.0
+  curved_navigation_bar: ^0.4.0-nullsafety.0
+
 
 dev_dependencies:
   flutter_test:
@@ -64,17 +66,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+      - family: GirassolRegular
+        fonts:
+         - asset: fonts/Girassol-Regular.ttf
+      - family: GoblinOneRegular
+        fonts:
+         - asset: fonts/GoblinOne-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
