--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   shared_preferences: ^2.0.5
   font_awesome_flutter: ^9.0.0
   curved_navigation_bar: ^0.4.0-nullsafety.0
+  faker: ^2.0.0
+
 
 
 dev_dependencies:
