--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  plugin_platform_interface: ^2.0.0
   get: ^4.1.4
   dio: ^4.0.0
-  shared_preferences: ^2.0.5
+  shared_preferences: 2.0.1
   font_awesome_flutter: ^9.0.0
   curved_navigation_bar: ^0.4.0-nullsafety.0
   image_picker: ^0.7.5+2
-  faker: ^2.0.0
 
 
 
@@ -70,12 +70,14 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-      - family: GirassolRegular
-        fonts:
-         - asset: fonts/Girassol-Regular.ttf
-      - family: GoblinOneRegular
-        fonts:
-         - asset: fonts/GoblinOne-Regular.ttf
+    - family: GoblinOneRegular
+      fonts:
+        - asset: fonts/GoblinOne-Regular.ttf
+    - family: SansitaSwashed
+      fonts:
+        - asset: fonts/SansitaSwashed-Regular.ttf
+
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
