--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   curved_navigation_bar: ^0.4.0-nullsafety.0
   image_picker: ^0.7.5+2
+  flutter_staggered_grid_view: ^0.4.0
+
 
 
 
